Correction z-index about et modale

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -21,7 +21,7 @@
 
         img {
             position: relative; 
-            z-index: 3; 
+            z-index: 0.5; 
         }
         
         .orange-circle{
@@ -31,7 +31,7 @@
             background-color: $color-beige;
             border-radius: 50%;
             position: absolute;
-            z-index: 1; 
+            z-index: 0; 
             top: 0;
             left: 0;
             right: 0;
