--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -28,7 +28,7 @@
     background-color: $color-beige;
     padding: 30px 50px;
     border-radius: 25px;
-    max-height: 580px;
+    max-height: 550px;
     overflow-y: auto; 
 }
 
